--- a/task-03.html
+++ b/task-03.html
@@ -13,6 +13,15 @@
         color: #424242;
         line-height: 1.5;
       }
+      #gallery li img{
+        max-width: 300px;
+        flex-direction: inline-flex;
+
+      }
+      #gallery li {
+        list-style: none;
+
+      }
     </style>
   </head>
   <body>
